--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~54.0.27",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
